--- a/HelloWorld.ipynb
+++ b/HelloWorld.ipynb
@@ -6,7 +6,7 @@
       "name": "HelloWorld.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPQ01BHqoIDYXevqD4oP7mR",
+      "authorship_tag": "ABX9TyPusZcUJzaITT2TEMLTEmHb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,17 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/undersonrs/Google-Colab/blob/main/HelloWorld.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4fF7o7nEppJ7"
+      },
+      "source": [
+        "// Iniciando atividades no Google-Colab //"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
